force-app/main/default/objects/Complaint_Form__c/Complaint_Form__c.object-meta.xml
<CustomObject>
    <label>Complaint Form</label>
    <nameField>
        <label>Complaint Form Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Complaint Forms</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>