force-app/main/default/objects/Complaint_Form__c/fields/Case__c.field-meta.xml
<CustomField>
    <fullName>Case__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Case</label>
    <referenceTo>Case</referenceTo>
    <relationshipLabel>Complaint Forms</relationshipLabel>
    <relationshipName>Complaint_Forms</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>