force-app/main/default/objects/Complaint_Form__c/fields/Case_Notes__c.field-meta.xml
<CustomField>
    <fullName>Case_Notes__c</fullName>
    <description>Notes from the related case.</description>
    <inlineHelpText>Notes from the related case.</inlineHelpText>
    <label>Case Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>