force-app/main/default/objects/Complaint_Form__c/fields/Case_Opened_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>Case_Opened_Date_Time__c</fullName>
    <formula>Case__r.CreatedDate</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case Opened Date/Time</label>
    <type>DateTime</type>
</CustomField>