force-app/main/default/objects/Complaint_Form__c/fields/Case_Owner__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Owner of the case that started the complaint</description>
    <inlineHelpText>Owner of the case that started the complaint</inlineHelpText>
    <label>Case Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Complaint_Forms</relationshipName>
    <type>Lookup</type>
</CustomField>