force-app/main/default/objects/Complaint_Form__c/fields/Complaint_Notes__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Notes__c</fullName>
    <label>Complaint Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>