force-app/main/default/objects/Complaint_Form__c/fields/Complaint_Type__c.field-meta.xml
<CustomField>
    <fullName>Complaint_Type__c</fullName>
    <description>What is the main issue of the complaint?</description>
    <inlineHelpText>What is the main issue of the complaint?</inlineHelpText>
    <label>Complaint Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Billing and payment disputes</fullName>
            </value>
            <value>
                <fullName>Communication problems</fullName>
            </value>
            <value>
                <fullName>Complexity of plan administration</fullName>
            </value>
            <value>
                <fullName>Customer service Issues</fullName>
            </value>
            <value>
                <fullName>Difficulty in Accessing Funds</fullName>
            </value>
            <value>
                <fullName>​Errors in Contributions</fullName>
            </value>
            <value>
                <fullName>Fee Issues</fullName>
            </value>
            <value>
                <fullName>Inaccurate Account Information</fullName>
            </value>
            <value>
                <fullName>Lack of communication</fullName>
            </value>
            <value>
                <fullName>Lack of education</fullName>
            </value>
            <value>
                <fullName>Suspected Fraud</fullName>
            </value>
            <value>
                <fullName>System Bugs/Issues</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>