force-app/main/default/objects/Complaint_Form__c/fields/Date_Resolved__c.field-meta.xml
<CustomField>
    <fullName>Date_Resolved__c</fullName>
    <description>Date the complaint was resolved</description>
    <inlineHelpText>Date the complaint was resolved</inlineHelpText>
    <label>Date Resolved</label>
    <type>Date</type>
</CustomField>