force-app/main/default/objects/Complaint_Form__c/fields/Manager_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Manager_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Checkbox to see if a manager has reviewed the complaint.</description>
    <inlineHelpText>Checkbox to see if a manager has reviewed the complaint.</inlineHelpText>
    <label>Manager Reviewed</label>
    <type>Checkbox</type>
</CustomField>