force-app/main/default/objects/Complaint_Form__c/fields/Resolved__c.field-meta.xml
<CustomField>
    <fullName>Resolved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Is the complaint resolved?</description>
    <inlineHelpText>Is the complaint resolved? If yes, check box.</inlineHelpText>
    <label>Resolved?</label>
    <type>Checkbox</type>
</CustomField>