force-app/main/default/objects/Complaint_Form__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Case_Opened_Date_Time__c</columns>
    <columns>Complaint_Tier__c</columns>
    <columns>Complaint_Type__c</columns>
    <columns>Manager_Reviewed__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>