force-app/main/default/objects/Complaint_Form__c/listViews/My_Unresolved_Complaint_Forms.listView-meta.xml
<ListView>
    <fullName>My_Unresolved_Complaint_Forms</fullName>
    <columns>NAME</columns>
    <columns>Case_Opened_Date_Time__c</columns>
    <columns>Complaint_Tier__c</columns>
    <columns>Complaint_Type__c</columns>
    <columns>Manager_Reviewed__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Unresolved Complaint Forms</label>
</ListView>